[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Enemies/WeaponEnemy.gd" type="Script" id=2]
[ext_resource path="res://Characters/Weapons/AimPivot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Weapons/AimPivot_NPC.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="WeaponEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
ACCELERATION = 600
MAX_SPEED = 60
PLAYER_DISTANCE = 40
WEAPON_INDEX = 0

[node name="AimPivot" parent="." index="6" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Collision/Hitbox" index="0"]
disabled = true

[node name="CollisionShape2D" parent="Collision/AttackZone" index="0"]
shape = SubResource( 1 )

[connection signal="weapon_ready" from="AimPivot" to="." method="_on_AimPivot_weapon_ready"]

[editable path="AimPivot"]
[editable path="Collision/SoftCollision"]
[editable path="Collision/Hurtbox"]
[editable path="Collision/Hitbox"]
[editable path="Collision/AttackZone"]
